# mecanum-bot

./: .gitignore  CMakeLists.txt  Quad.code-workspace  README.md
Control/: .clang-format  CMakeLists.txt
Control/include/: control.h
Control/main/: CMakeLists.txt  control.c  main.c
Libnow/: CMakeLists.txt
Libnow/src/: libnow.c  libnow.h
Quad/: CMakeLists.txt  Quad.code-workspace
Quad/include/: display.h  servomotor.h  sprites.h
Quad/main/: CMakeLists.txt  main.c  servomotor.c
components/atanisoft/: esp_lcd_touch_xpt2046.json
components/cherry-embedded/: cherryusb.json
components/cherry-embedded/cherryusb/1.5.2~2/: CHECKSUMS.json
components/esp-qa/: ping-cmd.json  wifi-cmd.json
components/esp-qa/wifi-cmd/0.2.11/: CHECKSUMS.json
components/espressif/: bdc_motor.json  catch2.json  ccomp_timer.json  ch390.json  cjson.json  cmake_utilities.json  dm9051.json  dp83848.json  ds18b20.json  enc28j60.json  eppp_link.json  esp-extconn.json  esp-zboss-lib.json  esp-zigbee-lib.json  esp_cam_sensor.json  esp_codec_dev.json  esp_flash_nor.json  esp_gcov.json  esp_h264.json  esp_hosted.json  esp_jpeg.json  esp_lcd_ek79007.json  esp_lcd_ili9881c.json  esp_lcd_nt35510.json  esp_lcd_sh1107.json  esp_lcd_touch.json  esp_lcd_touch_stmpe610.json  esp_ot_cli_extension.json  esp_sccb_intf.json  esp_serial_slave_link.json  esp_sysview.json  esp_tinyusb.json  esp_wifi_remote.json  ethernet_init.json  fmt.json  ip101.json  iperf-cmd.json  iperf.json  iqmath.json  json_generator.json  (+30 more)
components/espressif/catch2/3.7.0/: CHECKSUMS.json
components/espressif/ccomp_timer/1.0.0~1/: CHECKSUMS.json
components/espressif/dm9051/1.1.0/: CHECKSUMS.json
components/espressif/dp83848/1.0.0/: CHECKSUMS.json
components/espressif/esp-extconn/0.3.3/: CHECKSUMS.json
components/espressif/esp_flash_nor/0.1.0/: CHECKSUMS.json
components/espressif/esp_gcov/1.0.5/: CHECKSUMS.json
components/espressif/esp_lcd_nt35510/1.0.0/: CHECKSUMS.json
components/espressif/esp_sysview/1.0.2/: CHECKSUMS.json
components/espressif/esp_wifi_remote/1.5.2/: CHECKSUMS.json
components/espressif/fmt/9.1.0/: CHECKSUMS.json
components/espressif/iperf-cmd/1.0.2/: CHECKSUMS.json
components/espressif/iperf/1.0.2/: CHECKSUMS.json
components/espressif/iqmath/1.11.0~1/: CHECKSUMS.json
components/espressif/json_generator/1.2.0/: CHECKSUMS.json
components/espressif/ksz80xx/1.0.0/: CHECKSUMS.json
components/espressif/ksz8851snl/1.0.0/: CHECKSUMS.json
components/espressif/lightbulb_driver/1.11.2/: CHECKSUMS.json
components/espressif/onewire_bus/1.1.1/: CHECKSUMS.json
components/espressif/pcap/1.0.2/: CHECKSUMS.json
components/espressif/rtl8201/1.0.1/: CHECKSUMS.json
components/espressif/touch_element/1.1.2/: CHECKSUMS.json
components/espressif/usb_device_uac/1.2.3/: CHECKSUMS.json
components/espressif/usb_host_ftdi_vcp/2.1.0/: CHECKSUMS.json
components/espressif/usb_host_msc/1.2.0/: CHECKSUMS.json
components/espressif/usb_host_uvc/2.5.0/: CHECKSUMS.json
components/example/: cmp.json
components/example/cmp/3.3.9~1/: CHECKSUMS.json
components/joltwallet/: littlefs.json
components/lvgl/: lvgl.json
include/: display.h  sprites.h
lib/ssd1306/: CMakeLists.txt  ssd1306.h  ssd1306_i2c_new.c
main/: CMakeLists.txt  display.c  main.c
